traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:19: error: ':' expected but ')' found.
def posSuivante(gauche) : Boolean = {
                      ^TraversalZigZag:50: error: identifier expected but '}' found.
}
^